<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/homepage2"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".home_page2">
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:id="@+id/upload1111"
    android:text="@string/signout"

    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:text="@string/find_friends"
        android:id="@+id/findfriends111"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="270dp"
        android:text="@string/friends"
        android:id="@+id/friends111"
        />

    <Button
        android:id="@+id/message111"
        android:text="@string/message"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/addphoto111"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/add_photo"
        android:layout_marginLeft="150dp"
        android:gravity="center"
        android:layout_marginTop="500dp" />

    <Button
        android:id="@+id/uploads111"
        android:layout_width="wrap_content"
        android:layout_height="0dp"


        />

    <ProgressBar
        android:id="@+id/pb111"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <ScrollView
        android:id="@+id/scrollView2111"
        android:layout_width="375dp"
        android:layout_height="500dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/rl111"
            >

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/pic111"/>


        </RelativeLayout>


    </ScrollView>

</RelativeLayout>