<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Main2Activity">

    <ImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/signup"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/textbox"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/Full_Name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#f9f6f6"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/textbox"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:layout_below="@id/name"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="#f9f6f6"
        />


    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#f9f6f6"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email"
        />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/textbox"
        android:hint="@string/RePassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#f9f6f6"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/ca"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/repassword"
        android:layout_marginTop="70dp"
        android:background="@drawable/ca2"
        android:textColor="@color/white"
        android:text="@string/ca"
        android:textAlignment="center"
        />







</RelativeLayout>