<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab1"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upload"
            android:text="@string/signout"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_friends"
            android:id="@+id/findfriends"
android:layout_alignParentEnd="true"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:layout_centerHorizontal="true"

            android:id="@+id/friends"
            />






    <ProgressBar
        android:id="@+id/pb"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp" />


<android.support.v7.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_marginTop="50dp"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:id="@+id/myrecycler"

    >
</android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/addphoto"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:text="Add"
        android:background="@drawable/plus"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="350dp"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progresssignout"
        android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newupload"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

</RelativeLayout>